fix: correct prefix for ::-webkit-scrollbar-thumb selector

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -623,18 +623,18 @@ img {
   color: var(--text-color);
 }
 /*=============== SCROLL BAR ===============*/
-::webkit-scrollbar{
+::-webkit-scrollbar{
   width: .6rem;
   background-color: hsl(0, 0%,20%);
   border-radius: .5rem;
 }
 
-::webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb{
   background-color: hsl(0, 0%,30%);
   border-radius: .5rem;
 }
 
-::webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover{
   background-color: hsl(0, 0%,40%);
 }
 
